--- a/EFCoreSample.Test/EFCoreSample.Test.csproj
+++ b/EFCoreSample.Test/EFCoreSample.Test.csproj
@@ -104,6 +104,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="Entity\TestDatabaseContext.cs" />
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
